1.1.1
* Lib: enforce blocks version 3, starting from #364000
* WebUI: LoadTx shows only own transactions
* WebUI: Fixed transaction upload form at the Home tab
* WebUI: Transactions tab has an option to only show "own" transactions

1.1.0 - 2015-06-12
* Client: configuring "Walletdir" to allow improved privacy of the wallets
* Downloader: look for "Datadir" in "gocoin.conf" or "../client/gocoin.conf"
* Client: the Blocks page of WebUI shows version of the recent blocks
* Fix for issue #12 (Snappy URL changed)

1.0.3 - 2015-03-27
* Fix: GetHeaders for orphaned block does not cause panic anymore
* Fix: Github issue #11 (panic when first time run client)

1.0.2 - 2015-01-02
* Fix: GetHeaders for unknown block does not cause panic anymore
* Fix: Index out of range in "client/usif/webui/wallets.go" seen when quickly switching wallets
* Baning of incomming peers ignores the remote port number (only checks IP)
* WebUI: show last block number in the top level menu

1.0.1 - 2014-10-19
* Parallel processing switched back on (was accidentally disabled in "lib/others/sys/const.go")

1.0.0 - 2014-08-07
* Updated script/transaction test cases with the most recent files from bitcoin core
* Mining pool tags are now in miners.json - can be changed without restarting the node
* Allows to edit label of a wallet's address directly from WebUI
* Allows to select a hidden wallet at the Wallet tab of WebUI (so you can edit it)

1.0.0rc8 - 2014-06-19
* Wallet: shows hashed value of stealth prefixes (in decoded tx)
* Client: unspent4 - new format of UTXO database (lower memory and disk usage)
* Lib: add to UTXO records info about it coming from a coinbase
* Lib: bct.WriteVlen trakes 64-bit value now (previously 32)
* Downloader: further optimized, pings mode removed

1.0.0rc7 - 2014-06-11
* Wallet: more reorganizing and cleaning
* Wallet: removed "-hashes" option (added in 0.9.2)
* Reject blocks version < 2 of main chain's height >= 200000