@@ -23,6 +23,10 @@ Total number of blocks was <b>{BLOCKS_COUNT}</b>,
 Network's rate of <b>{AVG_HASHDATE}</b>,
 at average difficulty <b>{AVG_DIFFICULTY}</b>,
 which changes in <b>{DIFF_CHANGE_IN}</b> blocks<br>
+
+Total mining fees amount to <b><!--TOTAL_MINING_FEES--></b> BTC
+with the average of <b><!--AVERAGE_FEE_PER_BYTE--></b> Satoshis per byte.<br>
+
 <br>
 <table class="bord" width="100%">
 	<tr>
@@ -30,7 +34,9 @@ which changes in <b>{DIFF_CHANGE_IN}</b> blocks<br>
 		<th width="80" align="right">Blocks
 		<th width="80" align="right">Net Share
 		<th width="100" align="right">Hashrate
-		<th width="100" align="right">Avg blk len
+		<th width="100" align="right" title="Average Block Length">ABL
+		<th width="100" align="right">Fees BTC
+		<th width="60" align="right" title="Fee per byte">FPB
 		<th width="80" align="right">Monitor
 	</tr>
     <!--MINER_ROW-->
